src/slang/parser/antlr/SlangParser.py
# Generated from SlangParser.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SlangParser ( Parser ):

    grammarFileName = "SlangParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'else'", "'function'", "'if'", 
                     "'print'", "'return'", "'>='", "'<='", "'=='", "'!='", 
                     "'>'", "'<'", "'!'", "'+'", "'-'", "'*'", "'/'", "'='", 
                     "'('", "')'", "'{'", "'}'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "ELSE", "FUNCTION", "IF", 
                      "PRINT", "RETURN", "GTQ", "LTQ", "EQ", "NQ", "GT", 
                      "LT", "NOT", "ADD", "SUB", "MUL", "DIV", "BND", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "COMMA", "COLON", "NAME", 
                      "NUMBER", "WHITESPACE" ]

    RULE_workspace = 0
    RULE_function = 1
    RULE_statement = 2
    RULE_expression = 3

    ruleNames =  [ "workspace", "function", "statement", "expression" ]

    EOF = Token.EOF
    COMMENT=1
    ELSE=2
    FUNCTION=3
    IF=4
    PRINT=5
    RETURN=6
    GTQ=7
    LTQ=8
    EQ=9
    NQ=10
    GT=11
    LT=12
    NOT=13
    ADD=14
    SUB=15
    MUL=16
    DIV=17
    BND=18
    LPAREN=19
    RPAREN=20
    LBRACE=21
    RBRACE=22
    COMMA=23
    COLON=24
    NAME=25
    NUMBER=26
    WHITESPACE=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class WorkspaceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._function = None # FunctionContext
            self.functions = list() # of FunctionContexts
            self._statement = None # StatementContext
            self.statements = list() # of StatementContexts

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SlangParser.FunctionContext)
            else:
                return self.getTypedRuleContext(SlangParser.FunctionContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SlangParser.StatementContext)
            else:
                return self.getTypedRuleContext(SlangParser.StatementContext,i)


        def getRuleIndex(self):
            return SlangParser.RULE_workspace




    def workspace(self):

        localctx = SlangParser.WorkspaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_workspace)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SlangParser.FUNCTION:
                self.state = 8
                localctx._function = self.function()
                localctx.functions.append(localctx._function)
                self.state = 13
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 17
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SlangParser.IF) | (1 << SlangParser.PRINT) | (1 << SlangParser.RETURN) | (1 << SlangParser.NOT) | (1 << SlangParser.ADD) | (1 << SlangParser.SUB) | (1 << SlangParser.LPAREN) | (1 << SlangParser.NAME) | (1 << SlangParser.NUMBER))) != 0):
                self.state = 14
                localctx._statement = self.statement()
                localctx.statements.append(localctx._statement)
                self.state = 19
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self._NAME = None # Token
            self.parameters = list() # of Tokens
            self._statement = None # StatementContext
            self.statements = list() # of StatementContexts

        def FUNCTION(self):
            return self.getToken(SlangParser.FUNCTION, 0)

        def LPAREN(self):
            return self.getToken(SlangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(SlangParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(SlangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SlangParser.RBRACE, 0)

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(SlangParser.NAME)
            else:
                return self.getToken(SlangParser.NAME, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SlangParser.StatementContext)
            else:
                return self.getTypedRuleContext(SlangParser.StatementContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SlangParser.COMMA)
            else:
                return self.getToken(SlangParser.COMMA, i)

        def getRuleIndex(self):
            return SlangParser.RULE_function




    def function(self):

        localctx = SlangParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(SlangParser.FUNCTION)
            self.state = 21
            localctx.name = self.match(SlangParser.NAME)
            self.state = 22
            self.match(SlangParser.LPAREN)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SlangParser.NAME:
                self.state = 23
                localctx._NAME = self.match(SlangParser.NAME)
                localctx.parameters.append(localctx._NAME)
                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SlangParser.COMMA:
                    self.state = 24
                    self.match(SlangParser.COMMA)
                    self.state = 25
                    localctx._NAME = self.match(SlangParser.NAME)
                    localctx.parameters.append(localctx._NAME)
                    self.state = 30
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 33
            self.match(SlangParser.RPAREN)
            self.state = 34
            self.match(SlangParser.LBRACE)
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SlangParser.IF) | (1 << SlangParser.PRINT) | (1 << SlangParser.RETURN) | (1 << SlangParser.NOT) | (1 << SlangParser.ADD) | (1 << SlangParser.SUB) | (1 << SlangParser.LPAREN) | (1 << SlangParser.NAME) | (1 << SlangParser.NUMBER))) != 0):
                self.state = 35
                localctx._statement = self.statement()
                localctx.statements.append(localctx._statement)
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 41
            self.match(SlangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SlangParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ConditionalStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SlangParser.StatementContext
            super().__init__(parser)
            self.condition = None # ExpressionContext
            self._statement = None # StatementContext
            self.positive_branch = list() # of StatementContexts
            self.negative_branch = list() # of StatementContexts
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(SlangParser.IF, 0)
        def LPAREN(self):
            return self.getToken(SlangParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(SlangParser.RPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(SlangParser.ExpressionContext,0)

        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(SlangParser.LBRACE)
            else:
                return self.getToken(SlangParser.LBRACE, i)
        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(SlangParser.RBRACE)
            else:
                return self.getToken(SlangParser.RBRACE, i)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SlangParser.StatementContext)
            else:
                return self.getTypedRuleContext(SlangParser.StatementContext,i)

        def ELSE(self):
            return self.getToken(SlangParser.ELSE, 0)


    class PrintStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SlangParser.StatementContext
            super().__init__(parser)
            self.argument = None # ExpressionContext
            self.copyFrom(ctx)

        def PRINT(self):
            return self.getToken(SlangParser.PRINT, 0)
        def COLON(self):
            return self.getToken(SlangParser.COLON, 0)
        def expression(self):
            return self.getTypedRuleContext(SlangParser.ExpressionContext,0)



    class BindingStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SlangParser.StatementContext
            super().__init__(parser)
            self.name = None # Token
            self.value = None # ExpressionContext
            self.copyFrom(ctx)

        def BND(self):
            return self.getToken(SlangParser.BND, 0)
        def COLON(self):
            return self.getToken(SlangParser.COLON, 0)
        def NAME(self):
            return self.getToken(SlangParser.NAME, 0)
        def expression(self):
            return self.getTypedRuleContext(SlangParser.ExpressionContext,0)



    class ExpressionStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SlangParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(SlangParser.ExpressionContext,0)

        def COLON(self):
            return self.getToken(SlangParser.COLON, 0)


    class ReturnStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SlangParser.StatementContext
            super().__init__(parser)
            self.value = None # ExpressionContext
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(SlangParser.RETURN, 0)
        def COLON(self):
            return self.getToken(SlangParser.COLON, 0)
        def expression(self):
            return self.getTypedRuleContext(SlangParser.ExpressionContext,0)




    def statement(self):

        localctx = SlangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = SlangParser.ReturnStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.match(SlangParser.RETURN)
                self.state = 44
                localctx.value = self.expression(0)
                self.state = 45
                self.match(SlangParser.COLON)
                pass

            elif la_ == 2:
                localctx = SlangParser.PrintStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.match(SlangParser.PRINT)
                self.state = 48
                localctx.argument = self.expression(0)
                self.state = 49
                self.match(SlangParser.COLON)
                pass

            elif la_ == 3:
                localctx = SlangParser.ConditionalStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.match(SlangParser.IF)
                self.state = 52
                self.match(SlangParser.LPAREN)
                self.state = 53
                localctx.condition = self.expression(0)
                self.state = 54
                self.match(SlangParser.RPAREN)
                self.state = 64
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [SlangParser.LBRACE]:
                    self.state = 55
                    self.match(SlangParser.LBRACE)
                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SlangParser.IF) | (1 << SlangParser.PRINT) | (1 << SlangParser.RETURN) | (1 << SlangParser.NOT) | (1 << SlangParser.ADD) | (1 << SlangParser.SUB) | (1 << SlangParser.LPAREN) | (1 << SlangParser.NAME) | (1 << SlangParser.NUMBER))) != 0):
                        self.state = 56
                        localctx._statement = self.statement()
                        localctx.positive_branch.append(localctx._statement)
                        self.state = 61
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 62
                    self.match(SlangParser.RBRACE)
                    pass
                elif token in [SlangParser.IF, SlangParser.PRINT, SlangParser.RETURN, SlangParser.NOT, SlangParser.ADD, SlangParser.SUB, SlangParser.LPAREN, SlangParser.NAME, SlangParser.NUMBER]:
                    self.state = 63
                    localctx._statement = self.statement()
                    localctx.positive_branch.append(localctx._statement)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 78
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 66
                    self.match(SlangParser.ELSE)
                    self.state = 76
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [SlangParser.LBRACE]:
                        self.state = 67
                        self.match(SlangParser.LBRACE)
                        self.state = 71
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SlangParser.IF) | (1 << SlangParser.PRINT) | (1 << SlangParser.RETURN) | (1 << SlangParser.NOT) | (1 << SlangParser.ADD) | (1 << SlangParser.SUB) | (1 << SlangParser.LPAREN) | (1 << SlangParser.NAME) | (1 << SlangParser.NUMBER))) != 0):
                            self.state = 68
                            localctx._statement = self.statement()
                            localctx.negative_branch.append(localctx._statement)
                            self.state = 73
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 74
                        self.match(SlangParser.RBRACE)
                        pass
                    elif token in [SlangParser.IF, SlangParser.PRINT, SlangParser.RETURN, SlangParser.NOT, SlangParser.ADD, SlangParser.SUB, SlangParser.LPAREN, SlangParser.NAME, SlangParser.NUMBER]:
                        self.state = 75
                        localctx._statement = self.statement()
                        localctx.negative_branch.append(localctx._statement)
                        pass
                    else:
                        raise NoViableAltException(self)



                pass

            elif la_ == 4:
                localctx = SlangParser.BindingStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                localctx.name = self.match(SlangParser.NAME)
                self.state = 81
                self.match(SlangParser.BND)
                self.state = 82
                localctx.value = self.expression(0)
                self.state = 83
                self.match(SlangParser.COLON)
                pass

            elif la_ == 5:
                localctx = SlangParser.ExpressionStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 85
                self.expression(0)
                self.state = 86
                self.match(SlangParser.COLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SlangParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class GroupingExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(SlangParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(SlangParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(SlangParser.RPAREN, 0)


    class ReferenceExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SlangParser.ExpressionContext
            super().__init__(parser)
            self.target = None # Token
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(SlangParser.NAME, 0)


    class InvocationExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SlangParser.ExpressionContext
            super().__init__(parser)
            self.target = None # Token
            self._expression = None # ExpressionContext
            self.arguments = list() # of ExpressionContexts
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(SlangParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(SlangParser.RPAREN, 0)
        def NAME(self):
            return self.getToken(SlangParser.NAME, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SlangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SlangParser.ExpressionContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SlangParser.COMMA)
            else:
                return self.getToken(SlangParser.COMMA, i)


    class UnaryOperationExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SlangParser.ExpressionContext
            super().__init__(parser)
            self.operator = None # Token
            self.operand = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(SlangParser.ExpressionContext,0)

        def NOT(self):
            return self.getToken(SlangParser.NOT, 0)
        def ADD(self):
            return self.getToken(SlangParser.ADD, 0)
        def SUB(self):
            return self.getToken(SlangParser.SUB, 0)


    class LiteralExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SlangParser.ExpressionContext
            super().__init__(parser)
            self.value = None # Token
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(SlangParser.NUMBER, 0)


    class BinaryOperationExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SlangParser.ExpressionContext
            super().__init__(parser)
            self.left = None # ExpressionContext
            self.operator = None # Token
            self.right = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SlangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SlangParser.ExpressionContext,i)

        def MUL(self):
            return self.getToken(SlangParser.MUL, 0)
        def DIV(self):
            return self.getToken(SlangParser.DIV, 0)
        def ADD(self):
            return self.getToken(SlangParser.ADD, 0)
        def SUB(self):
            return self.getToken(SlangParser.SUB, 0)
        def LT(self):
            return self.getToken(SlangParser.LT, 0)
        def GT(self):
            return self.getToken(SlangParser.GT, 0)
        def GTQ(self):
            return self.getToken(SlangParser.GTQ, 0)
        def LTQ(self):
            return self.getToken(SlangParser.LTQ, 0)
        def EQ(self):
            return self.getToken(SlangParser.EQ, 0)
        def NQ(self):
            return self.getToken(SlangParser.NQ, 0)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SlangParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                localctx = SlangParser.GroupingExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 91
                self.match(SlangParser.LPAREN)
                self.state = 92
                self.expression(0)
                self.state = 93
                self.match(SlangParser.RPAREN)
                pass

            elif la_ == 2:
                localctx = SlangParser.UnaryOperationExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 95
                localctx.operator = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SlangParser.NOT) | (1 << SlangParser.ADD) | (1 << SlangParser.SUB))) != 0)):
                    localctx.operator = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 96
                localctx.operand = self.expression(8)
                pass

            elif la_ == 3:
                localctx = SlangParser.InvocationExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 97
                localctx.target = self.match(SlangParser.NAME)
                self.state = 98
                self.match(SlangParser.LPAREN)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SlangParser.NOT) | (1 << SlangParser.ADD) | (1 << SlangParser.SUB) | (1 << SlangParser.LPAREN) | (1 << SlangParser.NAME) | (1 << SlangParser.NUMBER))) != 0):
                    self.state = 99
                    localctx._expression = self.expression(0)
                    localctx.arguments.append(localctx._expression)
                    self.state = 104
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==SlangParser.COMMA:
                        self.state = 100
                        self.match(SlangParser.COMMA)
                        self.state = 101
                        localctx._expression = self.expression(0)
                        localctx.arguments.append(localctx._expression)
                        self.state = 106
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 109
                self.match(SlangParser.RPAREN)
                pass

            elif la_ == 4:
                localctx = SlangParser.ReferenceExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 110
                localctx.target = self.match(SlangParser.NAME)
                pass

            elif la_ == 5:
                localctx = SlangParser.LiteralExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 111
                localctx.value = self.match(SlangParser.NUMBER)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 126
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                    if la_ == 1:
                        localctx = SlangParser.BinaryOperationExpressionContext(self, SlangParser.ExpressionContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 114
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 115
                        localctx.operator = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==SlangParser.MUL or _la==SlangParser.DIV):
                            localctx.operator = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 116
                        localctx.right = self.expression(8)
                        pass

                    elif la_ == 2:
                        localctx = SlangParser.BinaryOperationExpressionContext(self, SlangParser.ExpressionContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 117
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 118
                        localctx.operator = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==SlangParser.ADD or _la==SlangParser.SUB):
                            localctx.operator = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 119
                        localctx.right = self.expression(7)
                        pass

                    elif la_ == 3:
                        localctx = SlangParser.BinaryOperationExpressionContext(self, SlangParser.ExpressionContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 120
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 121
                        localctx.operator = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SlangParser.GTQ) | (1 << SlangParser.LTQ) | (1 << SlangParser.GT) | (1 << SlangParser.LT))) != 0)):
                            localctx.operator = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 122
                        localctx.right = self.expression(6)
                        pass

                    elif la_ == 4:
                        localctx = SlangParser.BinaryOperationExpressionContext(self, SlangParser.ExpressionContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 123
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 124
                        localctx.operator = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==SlangParser.EQ or _la==SlangParser.NQ):
                            localctx.operator = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 125
                        localctx.right = self.expression(5)
                        pass

             
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[3] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 4)
         




